--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ISOMA CHIHUAHUA</title>
-
+    <link rel="icon" type="image/png" href="img/logoredondo.png">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -254,7 +254,7 @@
                     </div>
                 </div>
             </div>
-
+    
             <div class="row">
                 <h1 id="Titulosdeproductos">Manómetros</h1>
                 <!-- Tarjeta 1: Válvulas -->
@@ -262,25 +262,22 @@
                     <div id="carouselValvulas" class="carousel slide" data-bs-ride="false">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <div id="cardValvulas1" class="card text-white text-center bg-dark pb-2">
+                                <div id="cardValvulas1" class="card text-white text-center bg-custom pb-2">
                                     <div class="card-body">
                                         <img src="img/manometropng.png" class="img-fluid" alt="" id="Imagencarusel">
                                         <h3 class="card-title">Manómetro Altamira</h3>
-                                    </p></p>
                                         <p>Acero inoxidable 304, lo que le proporciona durabilidad y resistencia a la corrosión.</p>
-                                            Conexión de bronce con rosca NPT macho de 1/4", asegurando una conexión robusta y confiable.</p>
-                                            Carátula y aguja de Aluminio, ofreciendo una lectura clara y precisa de las mediciones.</p>
-                                        </p>
+                                        <p>Conexión de bronce con rosca NPT macho de 1/4", asegurando una conexión robusta y confiable.</p>
+                                        <p>Carátula y aguja de Aluminio, ofreciendo una lectura clara y precisa de las mediciones.</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <div id="cardValvulas2" class="card text-white text-center bg-dark pb-2">
+                                <div id="cardValvulas2" class="card text-white text-center bg-custom pb-2">
                                     <div class="card-body">
                                         <img src="img/manomerto.jpg" class="img-fluid" alt="" id="Imagencarusel">
-                                        <h3 class="card-title"></h3>
-                                        <p>Instrumento de medición de presión, preciso y duradero, utilizado en diversos
-                                            sistemas industriales para monitorear la presión de gases o líquidos.</p>
+                                        <h3 class="card-title">Manómetro</h3>
+                                        <p>Instrumento de medición de presión, preciso y duradero, utilizado en diversos sistemas industriales para monitorear la presión de gases o líquidos.</p>
                                     </div>
                                 </div>
                             </div>
@@ -301,26 +298,20 @@
                     <div id="carouselManometros" class="carousel slide" data-bs-ride="false">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <div id="cardManometros1" class="card text-white text-center bg-dark pb-2">
+                                <div id="cardManometros1" class="card text-white text-center bg-custom pb-2">
                                     <div class="card-body">
                                         <img src="img/tuberia1png.png" class="img-fluid" alt="" id="Imagencarusel">
                                         <h3 class="card-title">Válvula de seguridad modelo 678</h3>
-                                        <p>
-                                            Protege equipos presurizados liberando presión automáticamente al alcanzar
-                                            un límite preestablecido. Ideal para aplicaciones industriales.
-                                        </p>
+                                        <p>Protege equipos presurizados liberando presión automáticamente al alcanzar un límite preestablecido. Ideal para aplicaciones industriales.</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <div id="cardManometros2" class="card text-white text-center bg-dark pb-2">
+                                <div id="cardManometros2" class="card text-white text-center bg-custom pb-2">
                                     <div class="card-body">
                                         <img src="img/tuberianormal.jpg" class="img-fluid" alt="" id="Imagencarusel">
                                         <h3 class="card-title">Válvula de seguridad modelo 221</h3>
-                                        <p>
-                                            Protege sistemas presurizados liberando presión cuando se excede el límite
-                                            seguro. Ideal para aplicaciones industriales.
-                                        </p>
+                                        <p>Protege sistemas presurizados liberando presión cuando se excede el límite seguro. Ideal para aplicaciones industriales.</p>
                                     </div>
                                 </div>
                             </div>
@@ -335,41 +326,10 @@
                         </button>
                     </div>
                 </div>
-                <!-- Tarjeta 3: Cascos -->
-                <!-- <div class="col-12 col-md-12 col-lg-4 mb-4">
-                    <div id="carouselCascos" class="carousel slide" data-bs-ride="false">
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <div id="cardCascos1" class="card text-white text-center bg-dark pb-2">
-                                    <div class="card-body">
-                                        <img src="img/casco.webp" class="img-fluid" alt="">
-                                        <h3 class="card-title">Cascos</h3>
-                                        <p>Protección industrial de alta calidad.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <div id="cardCascos2" class="card text-white text-center bg-dark pb-2">
-                                    <div class="card-body">
-                                        <img src="img/casco2.webp" class="img-fluid" alt="">
-                                        <h3 class="card-title">Cascos - Reforzados</h3>
-                                        <p>Modelo con protección extra y ajuste ergonómico.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselCascos" data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon"></span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselCascos" data-bs-slide="next">
-                            <span class="carousel-control-next-icon"></span>
-                        </button>
-                    </div>
-                </div>
-     -->
             </div>
         </div>
     </section>
+    
 
     <section class="contact section-padding">
         <div class="container mt-5 mb-5">
