eliminé la info del manometro altamira debido a que era muy grande

--- a/index.html
+++ b/index.html
@@ -266,9 +266,9 @@
                                     <div class="card-body">
                                         <img src="img/manometropng.png" class="img-fluid" alt="" id="Imagencarusel">
                                         <h3 class="card-title">Manómetro Altamira</h3>
-                                        <p>Acero inoxidable 304, lo que le proporciona durabilidad y resistencia a la corrosión.</p>
+                                        <!-- <p>Acero inoxidable 304, lo que le proporciona durabilidad y resistencia a la corrosión.</p>
                                         <p>Conexión de bronce con rosca NPT macho de 1/4", asegurando una conexión robusta y confiable.</p>
-                                        <p>Carátula y aguja de Aluminio, ofreciendo una lectura clara y precisa de las mediciones.</p>
+                                        <p>Carátula y aguja de Aluminio, ofreciendo una lectura clara y precisa de las mediciones.</p> -->
                                     </div>
                                 </div>
                             </div>
