Se le añadió de nuevo la descripción del manometro altamira

--- a/index.html
+++ b/index.html
@@ -266,9 +266,6 @@
                                     <div class="card-body">
                                         <img src="img/manometropng.png" class="img-fluid" alt="" id="Imagencarusel">
                                         <h3 class="card-title">Manómetro Altamira</h3>
-                                        <!-- <p>Acero inoxidable 304, lo que le proporciona durabilidad y resistencia a la corrosión.</p>
-                                        <p>Conexión de bronce con rosca NPT macho de 1/4", asegurando una conexión robusta y confiable.</p>
-                                        <p>Carátula y aguja de Aluminio, ofreciendo una lectura clara y precisa de las mediciones.</p> -->
                                     </div>
                                 </div>
                             </div>
@@ -276,9 +273,10 @@
                                 <div id="cardValvulas2" class="card text-white text-center bg-custom pb-2">
                                     <div class="card-body">
                                         <img src="img/manomerto.jpg" class="img-fluid" alt="" id="Imagencarusel">
-                                        <h3 class="card-title">Manómetro</h3>
-                                        <p>Instrumento de medición de presión, preciso y duradero, utilizado en diversos sistemas industriales para monitorear la presión de gases o líquidos.</p>
-                                    </div>
+                                        <h3 class="card-title"></h3>
+                                        <p>Acero inoxidable 304, lo que le proporciona durabilidad y resistencia a la corrosión.</p>
+                                        <p>Conexión de bronce con rosca NPT macho de 1/4", asegurando una conexión robusta y confiable.</p>
+                                        <p>Carátula y aguja de Aluminio, ofreciendo una lectura clara y precisa de las mediciones.</p>                                    </div>
                                 </div>
                             </div>
                         </div>
